--- a/index.html
+++ b/index.html
@@ -5,24 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Password Generator</title>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
-
 </head>
 <body>
-
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Random Password Generator</a>
+        <a class="navbar-brand" href="#">Password Generator</a>
     </nav>
-
     <div class="container">
-
         <div class="row">
-
-            <div class="col-lg-8 col-sm-12 mx-auto">
-
+            <div class="col-lg-12 col-sm-12">
                 <div class="content">
                     <h4>Random Password Generator</h4>
                     <br />
@@ -30,21 +22,17 @@
                     <br />
                     <input type="range" min="8" max="50" name="slider" id="slider">
                     <br />
-                    <button onclick="generate()">Generate</button>
-                    <button onclick="copyPassword()">Copy to Clipboard</button>
+                    <button onclick="create()">Generate</button>
+                    <button onclick="copy()">Copy to Clipboard</button>
                     <div id="length"></div>
                 </div>
-
                 <div class="previous_passwords">
                     <b>Previously Generated Passwords</b>
                     <br />
                     <div id="lastNums"></div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
     <script src="script.js"></script>
 </body>
