--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <br />
                     <input type="range" min="8" max="50" name="slider" id="slider">
                     <br />
-                    <button onclick="create()">Generate</button>
+                    <button onclick="password()">Generate</button>
                     <button onclick="copy()">Copy to Clipboard</button>
                     <div id="length"></div>
                 </div>
